add consultas no swagger
