# swagger/v1/swagger.yaml
@@ -4,6 +4,250 @@ info:
   title: API Saúde Mais V1
   version: v1
 paths:
+  "/consulta":
+    post:
+      summary: Cria consulta no sistema
+      tags:
+      - Consultas
+      parameters: []
+      responses:
+        '201':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                paciente_id:
+                  type: string
+                  example: 1
+                  description: ID unico incremental do registro na tabela
+                medico_id:
+                  type: string
+                  example: 2
+                  description: ID unico incremental do registro na tabela
+                paciente_nome:
+                  type: string
+                  example: Alexsandro Perreira da Silva
+                  description: Nome do paciente
+                medico_nome:
+                  type: string
+                  example: Pedro da Silva
+                  description: Nome do médico
+                especialidade:
+                  type: string
+                  example: Cardiologista
+                  description: Especialidade do médico
+                data:
+                  type: string
+                  example: '2023-11-21 04:13:55'
+                  description: Data da Consulta
+                local:
+                  type: string
+                  example: 269-233-7639 19782
+                  description: Endereço da Consulta
+    get:
+      summary: Lista consultas do sistema
+      tags:
+      - Consultas
+      parameters:
+      - name: page
+        in: query
+        description: Navega entre paginas para trazer os resultados paginados
+        required: false
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  paciente_id:
+                    type: string
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  medico_id:
+                    type: string
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  paciente_nome:
+                    type: string
+                    description: Nome do Paciente
+                    nullable: false
+                  medico_nome:
+                    type: string
+                    description: Nome do Médico
+                  especialidade:
+                    type: string
+                    description: Especialidade do Médico
+                  data:
+                    type: string
+                    description: Data da Consulta
+                  local:
+                    type: string
+                    description: Endereço da Consulta
+                example:
+                - id: 3
+                  paciente_id: 7
+                  medico_id: 29
+                  paciente_nome: Treena Jaskolski
+                  medico_nome: Marlin Murray
+                  especialidade: Dermatologista
+                  data: '2023-11-21 04:13:55'
+                  local: 9151 Maxima Ranch, Haagland, AR 15975-1803
+                  created_at: '2023-11-21T17:59:21.181Z'
+                  updated_at: '2023-11-21T17:59:21.181Z'
+  "/consulta/{id}":
+    delete:
+      summary: Deleta consulta do sistema
+      tags:
+      - Consultas
+      parameters:
+      - name: id
+        in: path
+        description: 'Parâmetro ID '
+        required: true
+        schema:
+          type: integer
+      responses:
+        '204':
+          description: deleted
+        '404':
+          description: not found
+    get:
+      summary: Busca consultas do sistema pelo ID
+      tags:
+      - Consultas
+      parameters:
+      - name: id
+        in: path
+        description: ID unico incremental do registro na tabela
+        required: true
+        schema:
+          type: integer
+      responses:
+        '404':
+          description: not_found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties: {}
+                example:
+                  error: Registro não encontrado
+        '200':
+          description: successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  paciente_id:
+                    type: string
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  medico_id:
+                    type: string
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  paciente_nome:
+                    type: string
+                    description: Nome do Paciente
+                    nullable: false
+                  medico_nome:
+                    type: string
+                    description: Nome do Médico
+                  especialidade:
+                    type: string
+                    description: Especialidade do Médico
+                  data:
+                    type: string
+                    description: Data da Consulta
+                  local:
+                    type: string
+                    description: Endereço da Consulta
+                example:
+                - id: 3
+                  paciente_id: 7
+                  medico_id: 29
+                  paciente_nome: Treena Jaskolski
+                  medico_nome: Marlin Murray
+                  especialidade: Dermatologista
+                  data: '2023-11-21 04:13:55'
+                  local: 9151 Maxima Ranch, Haagland, AR 15975-1803
+                  created_at: '2023-11-21T17:59:21.181Z'
+                  updated_at: '2023-11-21T17:59:21.181Z'
+  "/consultas/{id}":
+    put:
+      summary: Atualiza consultas do sistema
+      tags:
+      - Consultas
+      parameters:
+      - name: id
+        in: path
+        description: Parâmetro ID para filtrar consultas
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: successful
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  paciente_id:
+                    type: string
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  medico_id:
+                    type: string
+                    description: ID unico incremental do registro na tabela
+                    nullable: false
+                  paciente_nome:
+                    type: string
+                    description: Nome do Paciente
+                    nullable: false
+                  medico_nome:
+                    type: string
+                    description: Nome do Médico
+                  especialidade:
+                    type: string
+                    description: Especialidade do Médico
+                  data:
+                    type: string
+                    description: Data da Consulta
+                  local:
+                    type: string
+                    description: Endereço da Consulta
+                example:
+                - id: 3
+                  paciente_id: 7
+                  medico_id: 29
+                  paciente_nome: Treena Jaskolski
+                  medico_nome: Marlin Murray
+                  especialidade: Dermatologista
+                  data: '2023-11-21 04:13:55'
+                  local: 9151 Maxima Ranch, Haagland, AR 15975-1803
+                  created_at: '2023-11-21T17:59:21.181Z'
+                  updated_at: '2023-11-21T17:59:21.181Z'
   "/medicos":
     post:
       summary: Cria médicos no sistema
@@ -515,6 +759,10 @@ paths:
                     type: string
                     example: Alexsandro Perreira da Silva
                     description: Nome do paciente
+                  especialidade:
+                    type: string
+                    example: Cardiologista
+                    description: Especialidade do médico
                   email:
                     type: string
                     example: russ@walter-beer.test
@@ -523,14 +771,18 @@ paths:
                     type: string
                     example: 269-233-7639 19782
                     description: Telefone para contato
-                  cpf:
+                  crm:
                     type: string
                     example: '893673654911'
-                    description: CPF do paciente
+                    description: CRM do médico
                   endereco:
                     type: string
                     example: 5785 Swift Throughway, New Nicolmouth
                     description: Endereco do paciente
+                  cpf:
+                    type: string
+                    example: '893673654911'
+                    description: CPF do paciente
                   data_nascimento:
                     type: string
                     example: 28/02/1936
